Fixed missing overflow

--- a/src/frontend/src/app/globals.css
+++ b/src/frontend/src/app/globals.css
@@ -47,6 +47,8 @@ body {
 	top: var(--header-size);
 	left: 0;
 
+	overflow-x: hidden;
+
 	width: calc(100vw - 2px);
 	height: calc(100vh - var(--header-size) - 1px);
 
@@ -76,6 +78,10 @@ main {
 a {
 	color: inherit;
 	text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-size: 1.5em;
 }
 
 * {
